--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,14 @@
 
 :root {
   --cyan: hsl(180, 66%, 49%);
+  --lightCyan: #50dcdc;
   --darkViolet: hsl(257, 27%, 26%);
   --red: hsl(0, 87%, 67%);
   --gray: hsl(0, 0%, 75%);
   --grayishViolet: hsl(257, 7%, 63%);
   --veryDarkBlue: hsl(255, 11%, 22%);
   --veryDarkViolet: hsl(260, 8%, 14%);
+  --line: hsl(257deg 20% 33%);
 }
 
 *,
