--- a/src/Layout/Nav/Nav.scss
+++ b/src/Layout/Nav/Nav.scss
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: white;
   &__logo-container {
     display: flex;
     justify-content: center;
