--- a/src/index.scss
+++ b/src/index.scss
@@ -23,4 +23,9 @@
 html {
   font-size: 18px;
   font-family: "Poppins";
+  overflow-x: hidden;
+}
+
+body {
+  background-color: rgb(235, 235, 235);
 }
