--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 
 :root {
-  --cyan: hsl(180, 66%, 49%);
+  --cyan: #2acfcf;
   --lightCyan: #50dcdc;
   --darkViolet: hsl(257, 27%, 26%);
   --red: hsl(0, 87%, 67%);
