--- a/src/Layout/Nav/Nav.scss
+++ b/src/Layout/Nav/Nav.scss
@@ -7,12 +7,20 @@
 
 .Nav {
   position: relative;
-  width: 100vw;
-  padding: 30px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: white;
+  &__container {
+    width: 100vw;
+    padding: 30px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @media (min-width: 1000px) {
+      max-width: 900px;
+
+      margin: 0 auto;
+      padding: 30px 0;
+    }
+  }
   &__logo-container {
     display: flex;
     justify-content: center;
@@ -25,6 +33,9 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    @media (min-width: 1000px) {
+      display: none;
+    }
   }
   &__hamburger-menu {
     @include hamburger;
@@ -75,6 +86,10 @@
     border-radius: 10px;
     color: white;
     transition: all 0.6s;
+    @media (min-width: 1000px) {
+      display: none;
+    }
+
     &--active {
       transform: translateX(-50%);
     }
@@ -86,15 +101,45 @@
       }
     }
   }
-
+  &__desktop-menu {
+    display: none;
+    @media (min-width: 1000px) {
+      display: flex;
+      align-items: center;
+      padding-left: 50px;
+      width: 100%;
+      gap: 30px;
+      p {
+        color: var(--grayishViolet);
+        font-weight: 700;
+        font-size: 16px;
+        transition: all 0.2s;
+        cursor: pointer;
+        &:hover {
+          color: var(--darkViolet);
+        }
+        &:last-of-type {
+          margin-left: auto;
+        }
+      }
+    }
+  }
   &__mobile-menu-line {
     width: 90%;
     height: 2px;
     background-color: var(--line);
   }
+  &__button {
+    padding: 10px 20px;
+    color: white;
+    font-weight: 700;
+  }
   &__mobile-menu-button {
     width: 80%;
     padding: 10px 0;
+  }
+  &__mobile-menu-button,
+  &__button {
     display: flex;
     justify-content: center;
     align-items: center;
