--- a/src/Layout/Boost/Boost.scss
+++ b/src/Layout/Boost/Boost.scss
@@ -10,6 +10,9 @@
   align-items: center;
   flex-direction: column;
   gap: 20px;
+  @media (min-width: 1000px) {
+    background-image: url("../../../images/bg-boost-desktop.svg");
+  }
   &__button {
     width: 200px;
     padding: 10px 0;
