--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -1,12 +1,18 @@
 .Footer {
   background-color: var(--veryDarkViolet);
-  margin: 0 auto;
   &__container {
     padding: 50px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media (min-width: 1000px) {
+      flex-direction: row;
+      align-items: flex-start;
+      max-width: 1000px;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
   }
   &__logo {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(20deg)
@@ -15,6 +21,9 @@
   &__Box {
     text-align: center;
     margin-bottom: 50px;
+    @media (min-width: 1000px) {
+      margin-bottom: 0;
+    }
 
     p {
       color: var(--gray);
