--- a/src/Layout/Offers/Offers.scss
+++ b/src/Layout/Offers/Offers.scss
@@ -2,8 +2,24 @@
   max-width: 375px;
   padding: 0 20px;
   margin: 0 auto 100px auto;
+  @media (min-width: 1000px) {
+    max-width: 900px;
+    padding-bottom: 100px;
+  }
   &__about {
     text-align: center;
+    @media (min-width: 1000px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      max-width: 600px;
+      margin: 0 auto;
+
+      p {
+        margin-top: 25px;
+      }
+    }
     p {
       color: var(--grayishViolet);
     }
@@ -14,11 +30,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media (min-width: 1000px) {
+      flex-direction: row;
+    }
   }
-
+  &__Box {
+    @media (min-width: 1000px) {
+      &--2 {
+        transform: translateY(40px);
+      }
+      &--3 {
+        transform: translateY(80px);
+      }
+    }
+  }
   &__line {
     width: 7px;
     height: 80px;
     background-color: var(--cyan);
+    @media (min-width: 1000px) {
+      height: 7px;
+      width: 80px;
+    }
   }
 }
