--- a/src/Layout/ShortenLink/ShortenLink.scss
+++ b/src/Layout/ShortenLink/ShortenLink.scss
@@ -3,8 +3,8 @@
   background-image: linear-gradient(
     white 0%,
     white 50%,
-    rgb(235, 235, 235) 51%,
-    rgb(235, 235, 235) 100%
+    #f0f2f9 51%,
+    #f0f2f9 100%
   );
   display: flex;
   justify-content: center;
@@ -19,8 +19,23 @@
     margin: 0 20px;
     padding: 25px;
     border-radius: 10px;
+    @media (min-width: 1000px) {
+      background-image: url("../../../images/bg-shorten-desktop.svg");
+      background-position: center;
+      background-size: cover;
+      max-width: 900px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      padding: 40px;
+    }
   }
   &__input-container {
+    @media (min-width: 1000px) {
+      width: 80%;
+    }
     input {
       width: 100%;
       height: 50px;
@@ -53,6 +68,10 @@
     color: white;
     margin: 25px auto 0 auto;
     cursor: pointer;
+    @media (min-width: 1000px) {
+      margin: 0;
+      width: 20%;
+    }
     &:hover {
       background-color: var(--lightCyan);
     }
