--- a/src/Components/Box/Box.scss
+++ b/src/Components/Box/Box.scss
@@ -12,7 +12,8 @@
   @media (min-width: 1000px) {
     text-align: left;
     align-items: flex-start;
-    max-width: 450px;
+    max-width: 500px;
+    width: 100%;
   }
   h3 {
     margin-top: 30px;
