--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -3,6 +3,8 @@
   &__container {
     max-width: 375px;
     margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,6 +37,10 @@
       line-height: 40px;
       margin-bottom: 15px;
       font-weight: bold;
+      @media (min-width: 1000px) {
+        font-size: 54px;
+        line-height: 64px;
+      }
     }
     p {
       margin-bottom: 30px;
