--- a/src/Layout/Offers/Offers.scss
+++ b/src/Layout/Offers/Offers.scss
@@ -4,7 +4,7 @@
   margin: 0 auto 100px auto;
   @media (min-width: 1000px) {
     max-width: 900px;
-    padding-bottom: 100px;
+    padding: 0 0 100px 0;
   }
   &__about {
     text-align: center;
@@ -50,7 +50,7 @@
     background-color: var(--cyan);
     @media (min-width: 1000px) {
       height: 7px;
-      width: 80px;
+      width: 50px;
     }
   }
 }
